@@ -16,6 +16,7 @@
 * Moneris: Remove redundant card on file guard clause [davidsantoso] #3123
 * Switch order of Romania country codes [molbrown] #3125
 * Blue Snap: Supports Level 2/3 data [molbrown] #3126
+* Blue Snap: Support personal_identification_number [jknipp] #3128
 
 == Version 1.90.0 (January 8, 2019)
 * Mercado Pago: Support "gateway" processing mode [curiousepic] #3087
